# Satira

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: .dockerignore  Dockerfile.inference  Dockerfile.offline  Dockerfile.resolver
k8s/: configmap.yaml  context-resolver-hpa.yaml  context-resolver-service.yaml  context-resolver.yaml  inference-service.yaml  inference-worker.yaml  keda-scaledobject.yaml  offline-pipeline.yaml  shared-volumes.yaml
scripts/: evaluate.py  run_tests.sh  smoke_test_training.py  train.py
src/satira/: __init__.py
src/satira/api/: app.py  models.py
src/satira/config/: __init__.py
tests/: conftest.py
tests/integration/: test_deployment_integration.py  test_inference_integration.py  test_training_integration.py
tests/unit/: test_api.py  test_base_scraper.py  test_batch_resolver.py  test_batcher.py  test_classifier.py  test_compatibility.py  test_context_resolver.py  test_contradiction_gen.py  test_controller.py  test_corrections.py  test_cross_attention.py  test_curriculum.py  test_datasets.py  test_drift_monitor.py  test_embedding_cache.py  test_engine.py  test_entity_extraction.py  test_entity_resolution.py  test_evaluation.py  test_faiss_index.py  test_feedback.py  test_graph.py  test_image_pipeline.py  test_losses.py  test_modality_dropout.py  test_news_scrapers.py  test_pipeline.py  test_projections.py  test_reasoning.py  test_review_queue.py  test_satire_scrapers.py  test_source_credibility.py  test_synchronizer.py  test_temporal_retriever.py  test_trainer.py
(+36 files in other folders)
