[tool.poetry]
name = "satira"
version = "0.1.0"
description = "Multimodal Satire & Misinformation Detection Engine"
authors = ["Satira Team"]
readme = "README.md"
packages = [{include = "satira", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = ">=2.2"
torchvision = ">=0.17"
transformers = "^4.40"
fastapi = "^0.111"
uvicorn = {version = "^0.29", extras = ["standard"]}
pydantic = "^2.7"
pydantic-settings = "^2.2"
faiss-cpu = "^1.8"
easyocr = "^1.7"
redis = "^5.0"
feedparser = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
pytest-timeout = "^2.3"
httpx = "^0.27"
ruff = "^0.4"
black = "^24.4"
mypy = "^1.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
